--- a/pricing/index.html
+++ b/pricing/index.html
@@ -160,14 +160,14 @@
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">16.</span></em></td>
-        <td>Full browser support: Firefox, and Internet Explorer (version 10 and above)</td>
+        <td>Full browser support: Firefox, Internet Explorer (version 11 only), and Edge</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">17.</span></em></td>
-        <td>Full browser support: Opera, Safari, Android Browser, Internet Explorer (version 9)</td>
+        <td>Full browser support: Opera, Safari, Android Browser, Internet Explorer (version 9 and 10)</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
@@ -492,6 +492,9 @@
         <span class="pull-left" style="margin-left: 1rem;">
             <sup>7)</sup>
             <span>Via well-known federated identity provider(s), e.g. Facebook, Google, LinkedIn, and/or Twitter</span>
+        </span>
+        <span class="pull-right" style="margin-right: 3rem;">
+            <a href="https://github.com/eirikt/eirikt.github.io/commits/master">v1.10</a>
         </span>
     </div>
 </footer>
