--- a/pricing/index.html
+++ b/pricing/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <style>
         body {
             font-family: sans-serif;
@@ -27,7 +27,7 @@
 </head>
 <html>
 <body>
-<h2 class="centered ">My Service Level Agreement (<a href="http://en.wikipedia.org/wiki/Service-level_agreement">SLA</a>) plans</h2>
+<h2 class="centered ">My Service Level Agreement (<a href="https://en.wikipedia.org/wiki/Service-level_agreement">SLA</a>) plans</h2>
 <div class="centered" style="font-size:18px;font-style:italic;margin-top:-8px;">for web applications</div>
 <h4 class="centered" style="margin-top:2rem;">pick your plan - <a href="https://github.com/eirikt">give me a call</a></h4>
 
@@ -77,28 +77,28 @@
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">6.</span></em></td>
-        <td><a href="http://en.wikipedia.org/wiki/Open-source_software">Open-source</a> license</td>
+        <td><a href="https://en.wikipedia.org/wiki/Open-source_software">Open-source</a> license</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">7.</span></em></td>
-        <td><a href="http://en.wikipedia.org/wiki/Proprietary_software">Proprietary</a> license</td>
+        <td><a href="https://en.wikipedia.org/wiki/Proprietary_software">Proprietary</a> license</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">8.</span></em></td>
-        <td><a href="http://en.wikipedia.org/wiki/Non-disclosure_agreement">Non-disclosure agreement</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Non-disclosure_agreement">Non-disclosure agreement</a></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">9.</span></em></td>
-        <td>Available <a href="http://en.wikipedia.org/wiki/Issue_tracking_system">issue tracking</a> and project metrics</td>
+        <td>Available <a href="https://en.wikipedia.org/wiki/Issue_tracking_system">issue tracking</a> and project metrics</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
@@ -139,7 +139,7 @@
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">13.</span></em></td>
-        <td>Search engine optimization (<a href="http://en.wikipedia.org/wiki/Search_engine_optimization">SEO</a>)</td>
+        <td>Search engine optimization (<a href="https://en.wikipedia.org/wiki/Search_engine_optimization">SEO</a>)</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
@@ -209,7 +209,7 @@
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">23.</span></em></td>
-        <td>Web Content Accessibility, <a href="http://www.w3.org/WAI/intro/wcag">WCAG 2.0</a> (Level A-AAA) compliance<sup>&nbsp;4)</sup></td>
+        <td>Web Content Accessibility, <a href="https://www.w3.org/WAI/intro/wcag">WCAG 2.0</a> (Level A-AAA) compliance<sup>&nbsp;4)</sup></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
@@ -285,28 +285,28 @@
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">32.</span></em></td>
-        <td>Server <em>identity verification</em> (also known as <em><a href="http://en.wikipedia.org/wiki/Authentication">authentication</a></em>)</td>
+        <td>Server <em>identity verification</em> (also known as <em><a href="https://en.wikipedia.org/wiki/Authentication">authentication</a></em>)</td>
         <td class="sla-plan-column"><i class="check-icon"><sup>&nbsp;5)</sup></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">33.</span></em></td>
-        <td>User/Client <em>identity verification</em> (also known as <em><a href="http://en.wikipedia.org/wiki/Authentication">authentication</a></em>) via password-based log-in procedures<sup>&nbsp;6)</sup></td>
+        <td>User/Client <em>identity verification</em> (also known as <em><a href="https://en.wikipedia.org/wiki/Authentication">authentication</a></em>) via password-based log-in procedures<sup>&nbsp;6)</sup></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">34.</span></em></td>
-        <td>Single Sign-On (<a href="http://en.wikipedia.org/wiki/Single_sign-on">SSO</a>)<sup>&nbsp;7)</sup></td>
+        <td>Single Sign-On (<a href="https://en.wikipedia.org/wiki/Single_sign-on">SSO</a>)<sup>&nbsp;7)</sup></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">35.</span></em></td>
-        <td><a href="http://en.wikipedia.org/wiki/Role-based_access_control"><em>Role-based access control</em></a> (also known as <em><a href="http://en.wikipedia.org/wiki/Authorization">authorization</a></em>)</td>
+        <td><a href="https://en.wikipedia.org/wiki/Role-based_access_control"><em>Role-based access control</em></a> (also known as <em><a href="https://en.wikipedia.org/wiki/Authorization">authorization</a></em>)</td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
@@ -347,28 +347,28 @@
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">39.</span></em></td>
-        <td><a href="http://en.wikipedia.org/wiki/High_availability">High availability</a> ("four nines" and beyond)</td>
+        <td><a href="https://en.wikipedia.org/wiki/High_availability">High availability</a> ("four nines" and beyond)</td>
         <td colspan="3">
             <span class="pull-right" style="font-size:smaller;white-space: nowrap;margin-right: 3rem;"><em>Make me an offer I can't refuse</em></span>
         </td>
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">40.</span></em></td>
-        <td>Storage: < 100 <a href="http://en.wikipedia.org/wiki/Megabyte">MB</a></td>
+        <td>Storage: < 100 <a href="https://en.wikipedia.org/wiki/Megabyte">MB</a></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">41.</span></em></td>
-        <td>Storage: > 100 <a href="http://en.wikipedia.org/wiki/Megabyte">MB</a></td>
+        <td>Storage: > 100 <a href="https://en.wikipedia.org/wiki/Megabyte">MB</a></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">42.</span></em></td>
-        <td>Storage: > 10 <a href="http://en.wikipedia.org/wiki/Gigabyte">GB</a></td>
+        <td>Storage: > 10 <a href="https://en.wikipedia.org/wiki/Gigabyte">GB</a></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
@@ -409,14 +409,14 @@
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">46.</span></em></td>
-        <td>Available <a href="http://en.wikipedia.org/wiki/Issue_tracking_system">issue tracking</a> facility</td>
+        <td>Available <a href="https://en.wikipedia.org/wiki/Issue_tracking_system">issue tracking</a> facility</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
     </tr>
     <tr>
         <td class="sla-number-column"><em><span class="pull-right">47.</span></em></td>
-        <td>Available <a href="http://en.wikipedia.org/wiki/Software_bug">bug</a> reporting facility</td>
+        <td>Available <a href="https://en.wikipedia.org/wiki/Software_bug">bug</a> reporting facility</td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
         <td class="sla-plan-column"><i class="check-icon"></i></td>
@@ -465,7 +465,7 @@
     <div class="clearfix">
         <span class="pull-left" style="margin-left: 1rem;">
             <sup>3)</sup>
-            <span>External test bodies to be freely picked by you, e.g. <a href="http://theuserisdrunk.com">http://theuserisdrunk.com</a></span>
+            <span>External test bodies to be freely picked by you, e.g. <a href="https://theuserisdrunk.com">https://theuserisdrunk.com</a></span>
 
             </span>
         </span>
@@ -473,7 +473,7 @@
     <div class="clearfix">
         <span class="pull-left" style="margin-left: 1rem;">
             <sup>4)</sup>
-            <span>External test/acceptance bodies to be freely picked by you, formal verification to be performed by <a href="http://achecker.ca/checker/index.php">this checker service</a></span>
+            <span>External test/acceptance bodies to be freely picked by you, formal verification to be performed by <a href="https://achecker.ca/checker/index.php">this checker service</a></span>
         </span>
     </div>
     <div class="clearfix">
@@ -485,7 +485,7 @@
     <div class="clearfix">
         <span class="pull-left" style="margin-left: 1rem;">
             <sup>6)</sup>
-            <span>Inclusion of <a href="http://en.wikipedia.org/wiki/CAPTCHA">CAPTCHA</a> is possible</span>
+            <span>Inclusion of <a href="https://en.wikipedia.org/wiki/CAPTCHA">CAPTCHA</a> is possible</span>
         </span>
     </div>
     <div class="clearfix">
